--- a/omoss.html
+++ b/omoss.html
@@ -2,10 +2,81 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kaffe Paradiset - Om oss</title>
 </head>
+<header>
+
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#">Kaffe Paradiset</a>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item active">
+                <a href="index.html" class="nav-link">Hem</a>
+            </li>
+            <li class="nav-item active">
+                <a href="produkter.html" class="nav-link">Produkter</a>
+            </li>
+            <li class="nav-item active">
+                <a href="omoss.html" class="nav-link">Om oss</a>
+            </li>
+        </ul>
+    </div>
+    </nav>
+</header>
+
+<div class="cent">
+    <h1 class="text-center">About us</h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus viverra, quam nec tincidunt pellentesque, augue sapien tempor elit, nec placerat enim odio et justo. Nullam convallis dui a lorem euismod porttitor. Duis ut magna nunc. Nam eget dapibus metus. Ut nibh eros, tempus sed varius in, luctus eget lorem. Donec in odio non quam mattis elementum ut non lorem. Aliquam vestibulum quam ligula, et sodales neque malesuada posuere. Nullam bibendum, orci in venenatis eleifend, ante lacus dictum ante, nec facilisis ex risus vitae tortor.
+        <br><br>
+        Morbi id facilisis nunc. Fusce mollis porttitor arcu sit amet laoreet. Nam hendrerit bibendum ligula a porttitor. Nam vel turpis eget nisi mattis pharetra. Sed sapien odio, bibendum eget semper quis, dignissim id odio. Suspendisse blandit ac lorem vitae fermentum. Ut ac velit eu dolor mollis pretium semper euismod tellus. Nulla dignissim felis et finibus consequat. Suspendisse potenti. Nunc tellus metus, lacinia non pretium sed, scelerisque eu nunc. Duis id quam ac mauris efficitur ornare.
+        <br>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus viverra, quam nec tincidunt pellentesque, augue sapien tempor elit, nec placerat enim odio et justo. Nullam convallis dui a lorem euismod porttitor. Duis ut magna nunc. Nam eget dapibus metus. Ut nibh eros, tempus sed varius in, luctus eget lorem. Donec in odio non quam mattis elementum ut non lorem. Aliquam vestibulum quam ligula, et sodales neque malesuada posuere. Nullam bibendum, orci in venenatis eleifend, ante lacus dictum ante, nec facilisis ex risus vitae tortor.
+        
+    </p>
+</div>
+
+    <h1 class="text-center">Contact information</h1>
+<div class="card mb-3 cent" style="max-width: 540px;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="barista5.png" class="img-fluid rounded-start" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Paula Mewson, CEO</h5>
+          <p class="card-text">Paula Mewson oversses all operations at Kaffe paradiset.</p>
+          <p class="card-text">Phone: 123456237</p>
+          <p class="card-text">Email: paula.mewson@kaffeparadiset.com</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card mb-3 cent" style="max-width: 540px;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="barista6.png" class="img-fluid rounded-start" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Karolina Meowster, HR</h5>
+          <p class="card-text">Karolina Meoowster is the head of HR, any personnel inquiries should go through her!</p>
+          <p class="card-text">Phone: 79834589</p>
+          <p class="card-text">Email: karolina.meowster@kaffeparadiset.com</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<footer class="text-center ">
+    <div class="text-center p-3">
+        © 2024 Copyright: Kaffe paradiset
+    </div>
+</footer>
 <body>
     
 </body>
