felt like changing float-end to start.

--- a/produkter.html
+++ b/produkter.html
@@ -34,7 +34,7 @@
         <div class="row row-cols-2">
             <div class="col col-private">
                 <h3 class="text-center">Business customers</h3>
-                <figure class="figure float-end">
+                <figure class="figure float-start">
                     <img class="cat-business" src="barista1.jpg" alt="business cat">
                 <figcaption class="figure-caption">Our barista hard at work.</figcaption>
                 </figure>
